--- a/portfolio_app/templates/fifa.html
+++ b/portfolio_app/templates/fifa.html
@@ -44,7 +44,7 @@
                         <table class = "filter_left_table">
                             
                             <tr>
-                                <td class = "slider_label">{{ form.filter_age_min.label }}</td>
+                                <td class = "slider_label">{{ form.filter_age_min.label }} is between </td>
                                 <td class = "slider">{{ form.filter_age_min }}</td>
                                 <td class = "slider_break"><span id = "filter_slider_age_min_val">#</span></td>
                                 <td class = "slider_break">and</output></td>
@@ -53,7 +53,7 @@
                             </tr>
 
                             <tr>
-                                <td class = "slider_label">{{ form.filter_height_min.label }}</td>
+                                <td class = "slider_label">{{ form.filter_height_min.label }} is between </td>
                                 <td class = "slider">{{ form.filter_height_min }}</td>
                                 <td class = "slider_break"><span id = "filter_slider_hei_min_val">#</span></td>
                                 <td class = "slider_break">and</output></td>
@@ -62,7 +62,7 @@
                             </tr>
 
                             <tr>
-                                <td class = "slider_label">{{ form.filter_weight_min.label }}</td>
+                                <td class = "slider_label">{{ form.filter_weight_min.label }} is between </td>
                                 <td class = "slider">{{ form.filter_weight_min }}</td>
                                 <td class = "slider_break"><span id = "filter_slider_wei_min_val">#</span></td>
                                 <td class = "slider_break">and</output></td>
@@ -71,7 +71,7 @@
                             </tr>
 
                             <tr>
-                                <td class = "slider_label">{{ form.filter_value_min.label }}</td>
+                                <td class = "slider_label">{{ form.filter_value_min.label }} is between </td>
                                 <td class = "slider">{{ form.filter_value_min }}</td>
                                 <td class = "slider_break"><span id = "filter_slider_val_min_val">#</span></td>
                                 <td class = "slider_break">and</output></td>
@@ -80,7 +80,7 @@
                             </tr>
 
                             <tr>
-                                <td class = "slider_label">{{ form.filter_wage_min.label }}</td>
+                                <td class = "slider_label">{{ form.filter_wage_min.label }} is between </td>
                                 <td class = "slider">{{ form.filter_wage_min }}</td>
                                 <td class = "slider_break"><span id = "filter_slider_wag_min_val">#</span></td>
                                 <td class = "slider_break">and</output></td>
@@ -89,7 +89,7 @@
                             </tr>
 
                             <tr>
-                                <td class = "slider_label">{{ form.filter_overall_min.label }}</td>
+                                <td class = "slider_label">{{ form.filter_overall_min.label }} is between </td>
                                 <td class = "slider">{{ form.filter_overall_min }}</td>
                                 <td class = "slider_break"><span id = "filter_slider_rat_min_val">#</span></td>
                                 <td class = "slider_break">and</output></td>
