--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -177,6 +177,14 @@ a {
 
 .fifa-container {
   width: 100%;
+  display: flex;
+}
+
+.filter-sidebar {
+  width: 20%;
+  background-color: green;
+  padding: 0px 5px;
+  margin-right: 5px;
 }
 
 .card-stack {
@@ -185,6 +193,11 @@ a {
   width: 100%;
   margin: auto;
   justify-content: space-evenly;
+  background-color: #ddd;
+  overflow: auto;
+  position: sticky;
+  height: 600px;
+  /* top: 150px; */
 }
 
 .individual-card {
@@ -197,8 +210,12 @@ a {
   border-radius: 20px;
 }
 
+.individual-card:hover {
+  transform: scale(1.1); 
+  transition: 0.4s ease-in-out;
+}
+
 .player-image {
-  /* display: flex; */
   margin: auto;
   margin-top: 0px;
   width: 100%;
@@ -214,4 +231,20 @@ a {
 .player-details {
   display: inline;
   text-align: top;
+}
+
+.dropdown-single {
+  width: 95%;
+  padding: 5px;
+  margin-bottom: 5px;
+  background-color: #ddd;
+}
+
+.dropdown-single select {
+  width: 100%;
+}
+
+.dropdown-single p {
+  padding: 0px;
+  margin: 1px;
 }
