--- a/client/src/styles/About.css
+++ b/client/src/styles/About.css
@@ -48,85 +48,59 @@
   justify-content: center;
   width: 85%;
   padding: 0px;
-  border: var(--CHECKBORDERS);
+}
+
+.tech-details-expandable ul {
+  list-style-type: none;
+  padding: 0px;
+  margin: 0px;
 }
 
 .tech-details-expandable:hover {
   cursor: pointer;
 }
 
-#find-out {
-  width: 160px;
-  margin: 0px 0px 10px 80px;
-  font-size: 18px;
-}
 
-#find-out text {
-  margin: 0px 10px;
-}
+
+
+#find-out {width: 160px; margin: 0px 0px 10px 80px; font-size: 18px;}
+#find-out text {margin: 0px 10px;}
 
 
 
 
 .tech-stack-container {
+  max-height: 100px;
   display: flex;
+  float: left;
   justify-content: space-between;
-  width: 100%;
   margin: auto;
-  padding: 0px;
-  background-color: #f1f1f1;
+  padding: 5px;
+  background-color: #f7f7f7;
+  list-style-type: none;
   border-radius: 10px;
-  padding: 10px;
-  border: var(--CHECKBORDERS);
+  transition: 0.4s ease-out;
 }
 
-.tech-stack-groups {
-  width: 23%;
-  min-width: 200px;
-  margin: 0px;
-  padding: 0px;
-	display: flex;
-  flex-direction: column;
-	list-style-type: none;
-  justify-content: space-between;
-  border: var(--CHECKBORDERS);
-}
-
-.tech-capability-desc {
-  width: 40%;
-  text-align: justify;
-  border: var(--CHECKBORDERS);
-}
-
-.tech-stack-specifics {
-  width: 30%;
-  justify-content: space-evenly;
-  align-items: center;
-	list-style-type: none;
-  border: var(--CHECKBORDERS);
-}
-
-
-.tech-stack-container ul {
-  margin: 0px;
-  padding: 0px;
-	display: flex;
-  flex-wrap: wrap;
-	text-align: center;
-	list-style-type: none;
-  min-height: 80px;
-}
 
 
 .tech-stack-groups ul {
+  min-width: 200px;
+	display: flex;
+  margin-left: 5px;
   flex-direction: column;
   justify-content: space-between;
+  flex-wrap: nowrap;
+	text-align: center;
+  overflow: hidden;
+  transition: 0.4s ease-out;
 }
 
 .tech-stack-groups li {
-  margin: 2px 0px;
+  min-height: 25px;
   text-align: left;
-  line-height: 20px;
+  line-height: 25px;
+  align-items: center;
 }
 
 .tech-stack-groups li:hover {
@@ -134,14 +108,59 @@
   color: var(--blue);
 }
 
+
+
+
+
+
+
+
+.tech-capability-desc {
+  display: flex;
+  width: 45%;
+  text-align: justify;
+  align-content: center;
+}
+
+.tech-capability-desc p {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  margin: 0px;
+}
+
+
+
+.tech-stack-specifics {
+  display: flex;
+  align-items: center;
+  width: 30%;
+  margin: 0px;
+  min-width: 100px;
+}
+
+.tech-stack-specifics ul {
+  height: 100%;
+  width: 100%;
+  padding: 0px;
+	display: flex;
+  flex-wrap: wrap;
+	text-align: center;
+	list-style-type: none;
+  justify-content: space-evenly;
+  align-items: center;
+	list-style-type: none;
+  overflow: hidden;
+}
+
 .tech-stack-specifics li {
   margin: 0px 10px;
-  min-width: 50px;
+  max-height: 35px;
 }
 
 .tech-stack-specifics img {
-  height: 35px;
-  object-fit: contain;
+  max-height: 35px;
+  object-fit: cover;
   margin: 0px;
   padding: 0px;
 }
