--- a/client/src/styles/About.css
+++ b/client/src/styles/About.css
@@ -1,9 +1,10 @@
 
-.about-container {
+#about {
+  position: relative;
   margin: auto;
+  padding-top: 150px;
   display: flex;
 	width: 90%;
-  border: var(--CHECKBORDERS);
 }
 
 .about-image {
@@ -12,7 +13,6 @@
   margin: 0px 20px;
 	text-align: center;
 	justify-content: center;
-  border: var(--CHECKBORDERS);
 }
 
 #about-img {
@@ -28,7 +28,6 @@
   flex-direction: column;
   margin: 20px;
   min-width: 720px;
-  /* background-color: #bbb; */
   justify-content: center;
   border: var(--CHECKBORDERS);
 }
@@ -39,129 +38,3 @@
   border: 0px;
   text-align: justify;
 }
-
-
-.tech-details-expandable {
-  margin: auto;
-  margin-top: 10px;
-  display: block;
-  justify-content: center;
-  width: 85%;
-  padding: 0px;
-}
-
-.tech-details-expandable ul {
-  list-style-type: none;
-  padding: 0px;
-  margin: 0px;
-}
-
-.tech-details-expandable:hover {
-  cursor: pointer;
-}
-
-
-
-
-#find-out {width: 160px; margin: 0px 0px 10px 80px; font-size: 18px;}
-#find-out text {margin: 0px 10px;}
-
-
-
-
-.tech-stack-container {
-  max-height: 100px;
-  display: flex;
-  float: left;
-  justify-content: space-between;
-  margin: auto;
-  padding: 5px;
-  background-color: #f7f7f7;
-  list-style-type: none;
-  border-radius: 10px;
-  transition: 0.4s ease-out;
-}
-
-
-
-.tech-stack-groups ul {
-  min-width: 200px;
-	display: flex;
-  margin-left: 5px;
-  flex-direction: column;
-  justify-content: space-between;
-  flex-wrap: nowrap;
-	text-align: center;
-  overflow: hidden;
-  transition: 0.4s ease-out;
-}
-
-.tech-stack-groups li {
-  min-height: 25px;
-  text-align: left;
-  line-height: 25px;
-  align-items: center;
-}
-
-.tech-stack-groups li:hover {
-  cursor: pointer;
-  color: var(--blue);
-}
-
-
-
-
-
-
-
-
-.tech-capability-desc {
-  display: flex;
-  width: 45%;
-  text-align: justify;
-  align-content: center;
-}
-
-.tech-capability-desc p {
-  display: flex;
-  align-items: center;
-  font-size: 14px;
-  margin: 0px;
-}
-
-
-
-.tech-stack-specifics {
-  display: flex;
-  align-items: center;
-  width: 30%;
-  margin: 0px;
-  min-width: 100px;
-}
-
-.tech-stack-specifics ul {
-  height: 100%;
-  width: 100%;
-  padding: 0px;
-	display: flex;
-  flex-wrap: wrap;
-	text-align: center;
-	list-style-type: none;
-  justify-content: space-evenly;
-  align-items: center;
-	list-style-type: none;
-  overflow: hidden;
-}
-
-.tech-stack-specifics li {
-  margin: 0px 10px;
-  max-height: 35px;
-}
-
-.tech-stack-specifics img {
-  max-height: 35px;
-  object-fit: cover;
-  margin: 0px;
-  padding: 0px;
-}
-
