--- a/client/src/styles/About.css
+++ b/client/src/styles/About.css
@@ -1,10 +1,18 @@
 
 #about {
-  position: relative;
-  margin: auto;
-  padding-top: 150px;
+  display: block;
+  height: 750px;
+  padding-top: 50px;
+  margin-bottom: 50px;
+  width: 100%;
+}
+
+.about-container {
   display: flex;
-	width: 90%;
+  padding-top: 100px;
+  width: 90%;
+  margin: auto;
+  align-items: center;
 }
 
 .about-image {
@@ -33,8 +41,118 @@
 }
 
 .about-textbox p {
-  margin: 10px 0px;
+  margin: 20px 0px;
   padding: 0px;
   border: 0px;
   text-align: justify;
+}
+
+
+
+.find-out-more-expandable {
+  margin: auto;
+  margin-top: 10px;
+  display: block;
+  width: 85%;
+  padding: 0px;
+}
+
+.find-out-more-expandable:hover {
+  cursor: pointer;
+}
+
+#find-out {width: 160px; margin: 0px 0px 10px 80px; font-size: 18px;}
+#find-out text {margin: 0px 10px;}
+
+
+.tech-stack-container {
+  max-height: 100px;
+  display: flex;
+  float: left;
+  justify-content: space-between;
+  margin: auto;
+  padding: 5px;
+  background-color: #f7f7f7;
+  list-style-type: none;
+  border-radius: 10px;
+  transition: 0.4s ease-out;
+}
+
+
+
+.tech-stack-groups ul {
+  list-style-type: none;
+  padding: 0px;
+  margin: 0px;
+  min-width: 200px;
+	display: flex;
+  margin-left: 5px;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+	text-align: center;
+  overflow: hidden;
+  transition: 0.4s ease-out;
+}
+
+.tech-stack-groups li {
+  min-height: 25px;
+  text-align: left;
+  line-height: 25px;
+  align-items: center;
+}
+
+.tech-stack-groups li:hover {
+  cursor: pointer;
+  color: var(--blue);
+}
+
+.tech-capability-desc {
+  display: flex;
+  width: 45%;
+  text-align: justify;
+  align-content: center;
+}
+
+.tech-capability-desc p {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  margin: 0px;
+}
+
+.tech-stack-specifics {
+  display: flex;
+  align-items: center;
+  width: 30%;
+  margin: 0px;
+  min-width: 100px;
+}
+
+.tech-stack-specifics ul {
+  padding: 0px;
+  margin: 0px;
+  height: 100%;
+  width: 100%;
+  padding: 0px;
+	display: flex;
+  flex-wrap: wrap;
+	text-align: center;
+	list-style-type: none;
+  justify-content: space-evenly;
+  align-items: center;
+	list-style-type: none;
+  overflow: hidden;
+}
+
+.tech-stack-specifics li {
+  margin: 0px 10px;
+  max-height: 35px;
+}
+
+.tech-stack-specifics img {
+  max-height: 35px;
+  object-fit: cover;
+  margin: 0px;
+  padding: 0px;
 }
