--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -5,7 +5,6 @@
   --green: #44A1A0;
   --blue: #1B98E0;
 	--transition-speed: 1s;
-  --navbarheight: 30px;
   --outercontpadding: 0px;
 }
 
@@ -19,10 +18,12 @@ a {
 }
 
 .whitebox {
-  position: fixed;
+	position: fixed;
+	height: 20px;
+	top: 30px;
   z-index: 1;
   width: 100%;
-  background-image: linear-gradient(to top, rgba(255,255,255,0),rgba(255,255,255,1));
+  background-image: linear-gradient(to top, #FDFFFC00,#FDFFFCff);
 }
 
 .outer-container {
@@ -33,7 +34,6 @@ a {
 	width: 90%;
 	font-family: Roboto;
 	font-size: 16px;
-  border: var(--CHECKBORDERS);
 }
 
 
