--- a/client/src/styles/NavBar.css
+++ b/client/src/styles/NavBar.css
@@ -1,9 +1,10 @@
-
 .navbartop {
+  position: fixed;
+  z-index: 99;
 	width: 100%;
-  margin: 5px 0px 20px 0px;
+  margin: 0px 0px 30px 0px;
 	padding: 0;
-  height: var(--navbarheight);
+  height: 30px;
   background-color: var(--white);
 }
 
@@ -12,7 +13,7 @@
   display: flex;
   margin: 0px;
   padding: 0px;
-  height: (--navbarheight);
+  height: 30px;
   width: 100%;
 }
 
@@ -21,14 +22,14 @@
   color: inherit;
   display: block;
   text-align: center;
-  line-height: var(--navbarheight);
+  line-height: 30px;
   margin: 0px;
   padding: 0px;
 }
 
 .links-internal, .links-external {
   display: flex;
-  height: var(--navbarheight);
+  height: 30px;
   justify-content: center;
   align-items: center;
   text-align: center;
@@ -37,9 +38,10 @@
 
 .links-internal {
   float: left;
-  width: 30%;
+  width: 40%;
   background-color: var(--white);
   color: var(--black);
+  margin-left: 20px;
 }
 
 .links-internal li {
@@ -60,12 +62,13 @@
   width: 10%;
   background-color: white;
   color: var(--blue);
+  margin-right: 20px;
 }
 
 .links-external ul {
   text-align: center;
   justify-content: center;
-  max-height: var(--navbarheight);
+  max-height: 30px;
 }
 
 .links-external li {
@@ -73,11 +76,11 @@
 }
 
 .links-external img {
-  width: var(--navbarheight);
-  height: var(--navbarheight);
+  width: 20px;
+  height: 20px;
   object-fit: contain;
   margin: 0px;
-  padding: 0px;
+  padding: 2px 5px;
 }
 
 .links-external img:hover {
