--- a/client/src/styles/Analytics.css
+++ b/client/src/styles/Analytics.css
@@ -1,39 +1,51 @@
-
-#fifa {
+#analytics {
   display: block;
   height: 700px;
   width: 100%;
   padding-top: 50px;
   margin-bottom: 50px;
-  background-color: #eee;
+  /* background-color: #ddd; */
 }
 
-.fifa-container {
+.analytics-container {
   display: flex;
+  justify-content: left;
 }
 
-.filter-sidebar {
-  width: 20%;
-  background-color: #ddd;
-  padding: 0px 5px;
-  margin-right: 5px;
+.analytics-section {
+  width: 100%;
+  transition: 0.5s ease-in-out;
+  margin: 0px;
 }
+
+#left {
+  background-color: red;
+  max-width: 200px;
+}
+
+#middle {
+  background-color: blue;
+}
+
+#right {
+  background-color: green;
+}
+
+
+
+
+
 
 .card-stack {
   display: flex;
   flex-wrap: wrap;
-  width: 40%;
   justify-content: space-evenly;
   align-items: center;
-  background-color: #ddd;
   overflow: auto;
   position: sticky;
   height: 680px;
 }
 
-.analysis {
-  width: 40%;
-}
 
 .individual-card {
   display: flex;
@@ -47,7 +59,7 @@
 
 .individual-card:hover {
   transform: scale(1.1); 
-  transition: 0.4s ease-in-out;
+  /* transition: 0.4s ease-in-out; */
 }
 
 .player-image {
