--- a/client/src/styles/Analytics.css
+++ b/client/src/styles/Analytics.css
@@ -12,6 +12,96 @@
   justify-content: left;
 }
 
+.analytics-navbar-image {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  position: relative;
+  top: -23px;
+  filter: grayscale(100%);
+  border-radius: 5px;
+}
+
+
+.bigblockoftext {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  width: 40%;
+  z-index: 1;
+  position: relative;
+  top: -500px;
+  font-size: 20px;
+  color: black;
+  margin: auto;
+  padding: 0px 150px;
+  background-color: #ffffff95;
+  border-radius: 10px;
+}
+
+
+
+.analytics-navbar-overlay {
+  display: flex;
+  color: white;
+  flex-direction: column;
+  transition: 0.4s ease-in-out;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+.analytics-navbar {
+  display: flex;
+  justify-content: space-between;
+  max-width: 100%;
+  transition: 0.4s ease-in-out;
+  padding: 2px;
+}
+
+.analytics-navbar-overlay-expander {
+  display: flex;
+  float: right;
+  justify-content: center;
+  width: 6%;
+  font-size: 16px;
+  z-index: 1;
+  padding: 0px 5px;
+}
+
+.analytics-navbar-overlay-expander text {
+  margin-right: 5px;
+}
+
+.analytics-navbar-overlay-expander:hover {
+  cursor: pointer;
+}
+
+.analytics-content-filters {
+  display: flex;
+  justify-content: space-between;
+  float: right;
+  padding: 0px;
+  margin: 0px 10px;
+  width: 20%;
+  list-style-type: none;
+  transition: 0.5s;
+}
+
+.analytics-content-filters li {
+  margin: 0px 10px;
+  transition: 0.3s;
+}
+
+.analytics-content-filters li:hover {
+  cursor: pointer;
+  color: var(--blue);
+}
+
+
+
+
+
 .analytics-section {
   width: 100%;
   transition: 0.5s ease-in-out;
