--- a/client/src/styles/Defaults.css
+++ b/client/src/styles/Defaults.css
@@ -5,7 +5,6 @@
 	--white: #FDFFFC;
   --green: #44A1A0;
   --blue: #1B98E0;
-	--transition-speed: 1s;
   --outercontpadding: 0px;
 }
 
@@ -13,39 +12,187 @@ body {
 	margin: 0;
 	font-family: 'Roboto';
 	scroll-behavior: smooth;
+  background-color: var(--white);
 }
 
 a {
-	text-decoration: none;
+  color: var(--black);
+  text-decoration: none;
 }
 
-.outer-container {
+.link {
+  text-decoration: none;
+}
+
+img {
+  max-height: 100%;
+  object-fit: contain;
+  margin: 0px;
+}
+
+#outer-container {
   display: block;
-	padding-top: var(--outercontpadding);
+	padding-top: 0px;
   align-items: center;
 	margin: auto;
 	width: 90%;
 	font-family: Roboto;
 	font-size: 16px;
+
 }
 
-.show-hide {
+.page {
+  position: relative;
+  display: block;
+  margin: auto;
+  height: 665px;
+  width: 90%;
+  padding-top: 50px;
+  margin-bottom: 200px;
+  /* background-color: pink; */
+}
+
+.page-content {
   display: flex;
-  float: right;
-  justify-content: center;
-  width: 6%;
-  font-size: 16px;
-  z-index: 1;
-  padding: 0px 5px;
+  margin: auto;
+  align-items: center;
+  /* background-color: yellow; */
 }
 
-.show-hide text {
-  margin-right: 5px;
+.link, a {
+  text-decoration: none;
 }
 
-.show-hide:hover {
+.link:hover, a:hover {
   cursor: pointer;
+  color: var(--blue);
 }
+
+
+.flex-center-all {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-sp-bet {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.list-vertical {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  list-style-type: none;
+  flex-wrap: nowrap;
+  overflow: hidden;
+  padding: 0px;
+  margin: 0px;
+}
+
+.list-horizontal {
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+  flex-wrap: nowrap;
+  overflow: hidden;
+  padding: 0px;
+  margin: 0px;
+  height: 30px;
+  max-height: 30px;
+  line-height: 30px;
+  width: 100%;
+  text-align: center;
+}
+
+.list-horizontal li {
+  padding: 2px 0px;
+  width: 100%;
+}
+
+.list-wrap {
+  padding: 5px;
+  margin: 0px;
+  height: 100%;
+  width: 100%;
+	display: flex;
+  flex-wrap: wrap;
+	text-align: center;
+	list-style-type: none;
+  justify-content: space-evenly;
+  align-items: center;
+	list-style-type: none;
+  overflow: hidden;
+}
+
+.list-wrap  img {
+  max-height: 35px;
+  object-fit: cover;
+  margin: 0px;
+  padding: 0px;
+}
+
+
+.textbox {
+  display: block;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  text-align: justify;
+  padding: 0px 20px
+}
+
+.large-image {
+  width: 40%;
+  margin: 0px 20px;
+	height: 280px;
+	object-fit: cover;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -58,104 +205,18 @@ a {
   margin-bottom: 10px;
 }
 
-
-
-
-
-#about {
-  display: block;
-  height: 750px;
-  padding-top: 50px;
-  margin-bottom: 50px;
-  width: 100%;
-}
-
-.about-container {
-  display: flex;
-  padding-top: 100px;
-  width: 90%;
-  margin: auto;
-  align-items: center;
-}
-
-.about-image {
-  width: 30%;
-  min-width: 335px;
-  margin: 0px 20px;
-	text-align: center;
-	justify-content: center;
-}
-
-#about-img {
-	height: 300px;
-	width: 100%;
-	object-fit: cover;
-	object-position: 0 40%;
-	border-radius: 30px;
-  filter: grayscale(70%);
-}
-
-.about-textbox {
-  display: flex;
-  flex-direction: column;
-  margin: 20px;
-  min-width: 720px;
-  justify-content: center;
-}
-
-.about-textbox p {
-  margin: 10px 0px;
-  padding: 0px;
-  border: 0px;
-  text-align: justify;
-}
-
-
-
-.find-out-more-expandable {
-  margin: auto;
-  margin-top: 10px;
-  display: block;
-  width: 85%;
-  padding: 0px;
-}
-
-.find-out-more-expandable:hover {
-  cursor: pointer;
-}
-
-#find-out {width: 160px; margin: 0px 0px 10px 80px; font-size: 18px;}
-#find-out text {margin: 0px 10px;}
-
-
 .tech-stack-container {
   max-height: 100px;
   display: flex;
-  float: left;
   justify-content: space-between;
   margin: auto;
+  float: left;
   padding: 5px;
   background-color: #00000010;
   list-style-type: none;
   border-radius: 10px;
   transition: 0.4s ease-out;
-}
-
-
-
-.tech-stack-groups ul {
-  list-style-type: none;
-  padding: 0px;
-  margin: 0px;
-  min-width: 200px;
-	display: flex;
-  margin-left: 5px;
-  flex-direction: column;
-  justify-content: space-between;
-  flex-wrap: nowrap;
-	text-align: center;
   overflow: hidden;
-  transition: 0.4s ease-out;
 }
 
 .tech-stack-groups li {
@@ -163,11 +224,7 @@ a {
   text-align: left;
   line-height: 25px;
   align-items: center;
-}
-
-.tech-stack-groups li:hover {
-  cursor: pointer;
-  color: var(--blue);
+  overflow: hidden;
 }
 
 .tech-capability-desc {
@@ -175,6 +232,7 @@ a {
   width: 45%;
   text-align: justify;
   align-content: center;
+  overflow: hidden;
 }
 
 .tech-capability-desc p {
@@ -192,125 +250,8 @@ a {
   min-width: 100px;
 }
 
-.tech-stack-specifics ul {
-  padding: 0px;
-  margin: 0px;
-  height: 100%;
-  width: 100%;
-  padding: 0px;
-	display: flex;
-  flex-wrap: wrap;
-	text-align: center;
-	list-style-type: none;
-  justify-content: space-evenly;
-  align-items: center;
-	list-style-type: none;
-  overflow: hidden;
-}
-
-.tech-stack-specifics li {
-  margin: 0px 10px;
-  max-height: 35px;
-}
-
-.tech-stack-specifics img {
-  max-height: 35px;
-  object-fit: cover;
-  margin: 0px;
-  padding: 0px;
-}
-
-
-
-
-
-.navbartop {
-  position: fixed;
-  z-index: 99;
-	width: 100%;
-  margin: 0px 0px 30px 0px;
-	padding: 0;
-  height: 30px;
-  background-color: var(--white);
-}
-
-.navbartop ul {
-  list-style-type: none;
-  display: flex;
-  margin: 0px;
-  padding: 0px;
-  height: 30px;
-  width: 100%;
-}
-
-.navbartop a {
-  text-decoration: none;
-  color: inherit;
-  display: block;
-  text-align: center;
-  line-height: 30px;
-  margin: 0px;
-  padding: 0px;
-}
-
-.links-internal, .links-external {
-  display: flex;
-  height: 30px;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  border: var(--CHECKBORDERS);
-}
-
-.links-internal {
-  float: left;
-  width: 40%;
-  background-color: var(--white);
-  color: var(--black);
-  margin-left: 20px;
-}
-
-.links-internal li {
-  width: 100%;
-}
-
-.links-internal li:hover {
-  cursor: pointer;
-  color: var(--blue);
-  -webkit-transition: color 0.3s, font-size 0.3s;
-  -moz-transition: color 0.3s, font-size 0.3s;
-    -o-transition: color 0.3s, font-size 0.3s;
-       transition: color 0.3s, font-size 0.3s;
-}
-
-.links-external {
-  float: right;
-  width: 10%;
-  background-color: white;
-  color: var(--blue);
-  margin-right: 20px;
-}
-
-.links-external ul {
-  text-align: center;
-  justify-content: center;
-  max-height: 30px;
-}
-
-.links-external li {
-  width: 100%;
-}
-
-.links-external img {
-  width: 20px;
-  height: 20px;
-  object-fit: contain;
-  margin: 0px;
-  padding: 2px 5px;
-}
-
-.links-external img:hover {
-  cursor: pointer;
+.expander {
+  padding-left: 20px;
 }
 
 
@@ -318,19 +259,35 @@ a {
 
 
 
-#analytics {
-  display: block;
-  height: 700px;
-  width: 100%;
-  padding-top: 50px;
-  margin-bottom: 50px;
-  /* background-color: #ddd; */
-}
 
-.analytics-container {
-  display: flex;
-  justify-content: left;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .analytics-navbar-image {
   object-fit: cover;
@@ -345,23 +302,15 @@ a {
 
 
 .bigblockoftext {
-  display: flex;
-  align-content: center;
-  justify-content: center;
-  width: 40%;
+  width: 80%;
   z-index: 1;
   position: relative;
   top: -500px;
-  font-size: 20px;
   color: black;
   margin: auto;
-  padding: 0px 150px;
   background-color: #ffffff95;
   border-radius: 10px;
 }
-
-
-
 
 .analytics-navbar {
   display: flex;
@@ -386,15 +335,6 @@ a {
   margin: 0px 10px;
   transition: 0.3s;
 }
-
-.analytics-content-filters li:hover {
-  cursor: pointer;
-  color: var(--blue);
-}
-
-
-
-
 
 .analytics-section {
   width: 100%;
@@ -441,11 +381,6 @@ a {
   border-radius: 10px;
 }
 
-.individual-card:hover {
-  transform: scale(1.1); 
-  /* transition: 0.4s ease-in-out; */
-}
-
 .player-image {
   margin: auto;
   margin-top: 0px;
@@ -481,11 +416,46 @@ a {
 }
 
 
-#engagements {
-  display: block;
-  height: 700px;
-  width: 100%;
-  padding-top: 50px;
-  margin-bottom: 50px;
-  background-color: #eee;
+
+
+
+
+
+
+
+
+
+
+.tech-stack-groups ul {
+  min-width: 200px;
+  margin-left: 5px;
+}
+
+
+#links-external {
+  float: right;
+  width: 10%;
+  margin-right: 20px;
+}
+
+#links-internal {
+  float: left;
+  width: 40%;
+  margin-left: 20px;
+}
+
+#navbartop {
+  position: fixed;
+  z-index: 99;
+	width: 100%;
+  margin: 0px 0px 30px 0px;
+	padding: 0;
+  height: 30px;
+  background-color: var(--white);
+  color: var(--black);
+}
+
+#about-img {
+  filter: grayscale(70%);
+	border-radius: 20px;
 }
