--- a/client/src/styles/CardStack.css
+++ b/client/src/styles/CardStack.css
@@ -1,28 +1,58 @@
 
 .individual-card {
   display: flex;
-  background-color: var(--blue);
+  flex-direction: column;
+  height: 200px;
+  margin: 5px 0px;
+  width: 23%;
+  min-width: 180px;
+  max-width: 200px;
+  border-radius: 5px;
+  /* border: 1px solid red; */
+}
+
+.card-background-image {
+  width: 100%;
+  height: 100%;
+  top: -212px;
+  position: relative;
+  border-radius: 5px;
+  object-fit: cover;
+  z-index: -1;
+  filter: grayscale(100%);
+}
+
+
+
+.card-header {
+  display: flex;
+  position: relative;
+  top: 0px;
+  background-color: var(--black-90);
+  padding: 5px;
+  font-size: 13px;
+  height: 70px;
+  border-radius: 5px 5px 0px 0px;
   color: white;
-  min-width: 20%;
-  width: 22%;
-  margin: 5px;
-  border-radius: 10px;
+  border-bottom: 2px solid white
 }
 
 .player-image {
-  margin: auto;
-  margin-top: 0px;
-  width: 100%;
+  width: 40%;
+  object-fit: contain;
+  max-width: 70px;
+  min-height: 70px;
+  max-height: 70px;
   border-radius: 5px;
-  padding-bottom: 2px solid white;
+  background-color: #ffffff90;
 }
 
-.player-image img {
-  width:40%;
-  background-color: white;
+.card-body {
+  background-color: var(--black-20);
+  max-height: 128px;
+  min-height: 128px;
+  padding: 2px 10px;
+  color: var(--white);
 }
 
-.player-details {
-  display: inline;
-  text-align: top;
-}
+
