--- a/client/src/styles/CardStack.css
+++ b/client/src/styles/CardStack.css
@@ -5,19 +5,19 @@
   height: 200px;
   margin: 5px 0px;
   width: 23%;
-  min-width: 180px;
-  max-width: 200px;
+  min-width: 190px;
+  max-width: 190px;
   border-radius: 5px;
   /* border: 1px solid red; */
 }
 
 .card-background-image {
   width: 100%;
-  height: 100%;
-  top: -212px;
+  /* height: 600px; */
+  top: -200px;
   position: relative;
   border-radius: 5px;
-  object-fit: cover;
+  object-fit: fill;
   z-index: -1;
   filter: grayscale(100%);
 }
@@ -49,10 +49,13 @@
 
 .card-body {
   background-color: var(--black-20);
-  max-height: 128px;
-  min-height: 128px;
+  max-height: 114px;
+  min-height: 114px;
   padding: 2px 10px;
+  margin: 0px;
+  border: 0px;
   color: var(--white);
+  border-radius: 0px 0px 5px 5px;
 }
 
 
