--- a/client/src/styles/Defaults.css
+++ b/client/src/styles/Defaults.css
@@ -50,7 +50,7 @@ img {
 	padding-top: 0px;
   align-items: center;
 	margin: auto;
-	width: 90%;
+	width: 95%;
 	font-family: Roboto;
 	font-size: 16px;
 
@@ -61,7 +61,7 @@ img {
   display: block;
   margin: auto;
   height: 665px;
-  width: 90%;
+  width: 100%;
   padding-top: 50px;
   margin-bottom: 200px;
 }
@@ -102,6 +102,7 @@ img {
   transition: 0.5s ease-in-out;
   margin: 0px 5px 0px 0px;
   overflow: hidden;
+  border-radius: 5px;
 }
 
 .scroll-container {
