--- a/client/src/styles/Defaults.css
+++ b/client/src/styles/Defaults.css
@@ -20,7 +20,7 @@
 
 html {
   scroll-behavior: smooth;
-  transition: 0.4s ease-in-out;
+  transition: 1s ease-in-out;
   overflow-y:hidden;
 }
 
@@ -220,10 +220,55 @@ img {
 }
 
 
+.range-selector-cont {
+  display: flex;
+  align-content: center;
+  padding: 5px;
+  /* background-color: yellow; */
+  /* height: 20px; */
+}
 
 
 
 
+
+
+
+
+input[type=range] {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 100%;
+  background-color: inherit;
+  padding: 0px;
+  height: 20px;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 4px;
+  cursor: pointer;
+  background: white;
+  opacity: 0.8;
+}
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 20px;
+  width: 10px;
+  border-radius: 5px;
+  background: var(--green);
+  cursor: pointer;
+  margin-top: -8px;
+  opacity: 0.5;
+}
+
+input[type=range]:focus::-webkit-slider-thumb {
+  opacity: 1;
+}
+
+input[type=range]:focus::-webkit-slider-runnable-track {
+  opacity: 1;
+}
 
 
 
