--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -23,3 +23,229 @@
   filter: grayscale(70%);
 	border-radius: 20px;
 }
+
+
+
+
+
+
+
+
+.tech-stack-container {
+  max-height: 100px;
+  display: flex;
+  justify-content: space-between;
+  /* margin: auto; */
+  float: left;
+  padding: 5px;
+  background-color: #00000010;
+  /* list-style-type: none; */
+  border-radius: 10px;
+  transition: 0.4s ease-out;
+  overflow: hidden;
+}
+
+.tech-stack-groups li {
+  min-height: 25px;
+  text-align: left;
+  line-height: 25px;
+  align-items: center;
+  overflow: hidden;
+}
+
+.tech-capability-desc {
+  display: flex;
+  width: 45%;
+  text-align: justify;
+  align-content: center;
+  overflow: hidden;
+}
+
+.tech-capability-desc p {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  margin: 0px;
+}
+
+.tech-stack-specifics {
+  display: flex;
+  align-items: center;
+  width: 30%;
+  margin: 0px;
+  min-width: 100px;
+}
+
+.tech-stack-groups ul {
+  min-width: 200px;
+  margin-left: 5px;
+}
+
+.expander {
+  padding-left: 20px;
+}
+
+
+
+
+
+.individual-card {
+  display: flex;
+  flex-direction: column;
+  height: 200px;
+  margin: 5px 0px;
+  width: 23%;
+  min-width: 190px;
+  max-width: 190px;
+  border-radius: 5px;
+  /* border: 1px solid red; */
+}
+
+.card-background-image {
+  width: 100%;
+  /* height: 600px; */
+  top: -200px;
+  position: relative;
+  border-radius: 5px;
+  object-fit: fill;
+  z-index: -1;
+  filter: grayscale(100%);
+}
+
+
+
+.card-header {
+  display: flex;
+  position: relative;
+  top: 0px;
+  background-color: var(--black-90);
+  padding: 5px;
+  font-size: 13px;
+  height: 70px;
+  border-radius: 5px 5px 0px 0px;
+  color: white;
+  border-bottom: 2px solid white
+}
+
+.player-image {
+  width: 40%;
+  object-fit: contain;
+  max-width: 70px;
+  min-height: 70px;
+  max-height: 70px;
+  border-radius: 5px;
+  background-color: #ffffff90;
+}
+
+.card-body {
+  background-color: var(--black-20);
+  max-height: 114px;
+  min-height: 114px;
+  padding: 2px 10px;
+  margin: 0px;
+  border: 0px;
+  color: var(--white);
+  border-radius: 0px 0px 5px 5px;
+}
+
+
+.expandable-overlay {
+  display: flex;
+  color: white;
+  flex-direction: column;
+  transition: 0.4s ease-in-out;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+.expanable-overlay-stuff {
+  width: 100%;
+  height: 100%;
+  top: -24px;
+  position: relative;
+  border-radius: 5px;
+}
+
+.expandable-overlay-image {
+  object-fit: cover;
+  z-index: -1;
+  filter: grayscale(100%);
+}
+
+.expandable-overlay-textbox {
+  display: flex;
+  padding: 20px;
+  width: 80%;
+  z-index: 1;
+  position: relative;
+  top: -550px;
+  color: black;
+  margin: auto;
+  background-color: #ffffff95;
+  border-radius: 10px;
+  transition: opacity 1s;
+}
+
+
+
+
+.individual-card {
+  display: flex;
+  flex-direction: column;
+  height: 200px;
+  margin: 5px 0px;
+  width: 23%;
+  min-width: 190px;
+  max-width: 190px;
+  border-radius: 5px;
+  /* border: 1px solid red; */
+}
+
+.card-background-image {
+  width: 100%;
+  /* height: 600px; */
+  top: -200px;
+  position: relative;
+  border-radius: 5px;
+  object-fit: fill;
+  z-index: -1;
+  filter: grayscale(100%);
+}
+
+
+
+.card-header {
+  display: flex;
+  position: relative;
+  top: 0px;
+  background-color: var(--black-90);
+  padding: 5px;
+  font-size: 13px;
+  height: 70px;
+  border-radius: 5px 5px 0px 0px;
+  color: white;
+  border-bottom: 2px solid white
+}
+
+.player-image {
+  width: 40%;
+  object-fit: contain;
+  max-width: 70px;
+  min-height: 70px;
+  max-height: 70px;
+  border-radius: 5px;
+  background-color: #ffffff90;
+}
+
+.card-body {
+  background-color: var(--black-20);
+  max-height: 114px;
+  min-height: 114px;
+  padding: 2px 10px;
+  margin: 0px;
+  border: 0px;
+  color: var(--white);
+  border-radius: 0px 0px 5px 5px;
+}
+
+
